--- a/api/config_bnc_v1-1.json
+++ b/api/config_bnc_v1-1.json
@@ -12,12 +12,12 @@
         "image_onbording_1":"onboarding_ecran_1_design.png",
         "background_onbording1":"#E41923",
         "text_color_onbording1":"#FFFFFF",
-        "Image_defi1":"icon_defi_1.png",
-        "Image_defi2":"icon_defi_2.png",
-        "Image_defi3":"icon_defi_3.png",
-        "Image_defi4":"icon_defi_4.png",
-        "Image_defi5":"icon_defi_5.png",
-        "Image_defi6":"icon_defi_6.png",
+        "image_defi1":"icon_defi_1.png",
+        "image_defi2":"icon_defi_2.png",
+        "image_defi3":"icon_defi_3.png",
+        "image_defi4":"icon_defi_4.png",
+        "image_defi5":"icon_defi_5.png",
+        "image_defi6":"icon_defi_6.png",
         "background_onbording2":"#FFFFFF",
         "text_color_onbording2":"#000000",
         "image_onbording_3_1":"onboarding_connectors_1.png",
@@ -140,6 +140,7 @@
         "text_color_success":"#FFFFFF"
     },
     "Statistics":{
+        "background_home":"bg_bleu.png",
         "tab_color_default":"#E41923",
         "tab_color_selected":"#FFFFFF",
         "background_text_type_report":"#EEF9F9F9",
