--- a/api/config_bnc_v1-1.json
+++ b/api/config_bnc_v1-1.json
@@ -140,7 +140,7 @@
         "text_color_success":"#FFFFFF"
     },
     "Statistics":{
-        "background_home":"bg_bleu.png",
+        "background_statistics":"bg_bleu.png",
         "tab_color_default":"#E41923",
         "tab_color_selected":"#FFFFFF",
         "background_text_type_report":"#EEF9F9F9",
