--- a/api/config_bnc_v1-1.json
+++ b/api/config_bnc_v1-1.json
@@ -137,7 +137,11 @@
         "background_select_team":"#40FFFFFF",
         "text_color_select_team":"#FFFFFF",
         "background_success":"bg_balloones.png",
-        "text_color_success":"#FFFFFF"
+        "text_color_success":"#FFFFFF",
+        "tab_color_new_challenge_default":"E41923",
+        "tab_color_new_challenge_selected":"#FFFFFF",
+        "text_tab_color_new_challenge_default":"#FFFFFF",
+        "text_tab_color_new_challenge_selected":"#FF6D6E70"
     },
     "Statistics":{
         "background_statistics":"bg_bleu.png",
